--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@
 /Assignment 1/Assignment 1/Assignment 1.vcxproj
 /Assignment 1/x64/Debug
 *.sln
+/Assignment 2/.vs/Assignment 2
+/Assignment 2/Assignment 2.vcxproj.user
+/Assignment 2/Assignment 2.vcxproj.filters
+/Assignment 2/Assignment 2.vcxproj
+/Assignment 2/x64/Debug
