Assignment 3: const Qualifer & Compound Types

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@
 /Assignment 1/Assignment 1/Assignment 1.vcxproj
 /Assignment 1/x64/Debug
 *.sln
+/Assignment 2/.vs/Assignment 2
+/Assignment 2/x64/Debug
+/Assignment 2
+/Assignment 3/x64/Debug
+/Assignment 3/.vs/Assignment 3
+/Assignment 3/Assignment 3.vcxproj.user
+/Assignment 3/Assignment 3.vcxproj.filters
+/Assignment 3/Assignment 3.vcxproj
