Memory allocation in C

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@
 /Assignment 1/Assignment 1/Assignment 1.vcxproj
 /Assignment 1/x64/Debug
 *.sln
+/Assignment 4
+/Assignment 3
+/Assignment 2
+/Memory Management/x64/Debug
+/Memory Management/.vs/Memory Management
+/Memory Management/Memory Management.vcxproj.user
+/Memory Management/Memory Management.vcxproj.filters
+/Memory Management/Memory Management.vcxproj
